# easy-eval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  manual_publish.yaml
examples/: .gitignore  README.md  questions.yaml  run.py
src/easy_eval/: plotting.py  question.py  runner.py
src/lm_query/: __init__.py  benchmark.py  question.py  runner.py
src/lm_query/scorer/: dummy.py  model_graded_rating.py
tests/unit/: test_loading.py  test_question.py
tests/unit/scorer/: test_model_graded_rating.py
