[project]
name = "lm-query"
version = "0.1.0"
description = "High-level interface for evaluating and querying LLMs"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["pandas>=2.2.3", "tqdm>=4.67.1", "inspect-ai>=0.3.55"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
