[project]
name = "lm-query"
version = "0.1.0"
description = "High-level interface for evaluating and querying LLMs"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["pandas>=2.2.3", "tqdm>=4.67.1", "inspect-ai>=0.3.55"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
examples = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "ipywidgets>=8.1.5",
    "openai>=1.58.1",
    "anthropic>=0.42.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
